updated new way to show posts in main??

--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -11,9 +11,12 @@ posts
 {% endblock title %}
 
 {% block content %}
+    {% comment %}
     {% for obj in qs %}
         {{obj.title}} - {{obj.body}} <br>
     {% endfor %}
+    {% endcomment %}
+    <div id="posts-box"></div>
     <div id="hello-world"></div>
 {% endblock content %}
 
