--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -16,6 +16,9 @@ posts
         {{obj.title}} - {{obj.body}} <br>
     {% endfor %}
     {% endcomment %}
+    <div id="spinner-box">
+        <div class="spinner-border" role="status"></div>
+    </div>
     <div id="posts-box"></div>
     <div id="hello-world"></div>
 {% endblock content %}
