--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -16,7 +16,7 @@ posts
         {{obj.title}} - {{obj.body}} <br>
     {% endfor %}
     {% endcomment %}
-    <div id="spinner-box">
+    <div id="spinner-box" class="text-center">
         <div class="spinner-border" role="status"></div>
     </div>
     <div id="posts-box"></div>
