add a button to trigger a modal

--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -11,11 +11,36 @@ posts
 {% endblock title %}
 
 {% block content %}
-    {% comment %}
-    {% for obj in qs %}
-        {{obj.title}} - {{obj.body}} <br>
-    {% endfor %}
-    {% endcomment %}
+    
+    <!-- Modal -->
+    <div class="modal fade" id="addPostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content">
+            
+            <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Create post</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            
+            <div class="modal-body">
+            ...
+            </div>
+            
+            <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">close</button>
+            <button type="button" class="btn btn-success">+ add</button>
+            </div>
+    
+        </div>
+        </div>
+    </div>
+    
+    <!-- Button to trigger modal -->
+    <button type="button" class="btn btn-info mb-2" data-bs-toggle="modal" data-bs-target="#addPostModal">
+        add post
+    </button>
+  
+
     <div id="posts-box"></div>
     <div id="spinner-box" class="text-center">
         <div class="spinner-border" role="status"></div>
