--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 
 {% block scripts %}
     <script src="{% static 'posts/main.js' %}" defer></script>
@@ -15,23 +17,22 @@ posts
     <!-- Modal -->
     <div class="modal fade" id="addPostModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-        <div class="modal-content">
-            
-            <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Create post</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Create post</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                
+                <div class="modal-body">
+                    <form id="post-form">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">close</button>
+                            <button type="submit" class="btn btn-success">+ add</button>
+                        </div>
+                </div>
             </div>
-            
-            <div class="modal-body">
-            ...
-            </div>
-            
-            <div class="modal-footer">
-            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">close</button>
-            <button type="button" class="btn btn-success">+ add</button>
-            </div>
-    
-        </div>
         </div>
     </div>
     
