able to add posts through the modal form (also add alert box)

--- a/posts/templates/posts/main.html
+++ b/posts/templates/posts/main.html
@@ -35,6 +35,8 @@ posts
             </div>
         </div>
     </div>
+
+    <div id="alert-box"></div>
     
     <!-- Button to trigger modal -->
     <button type="button" class="btn btn-info mb-2" data-bs-toggle="modal" data-bs-target="#addPostModal">
