added buttons and spinner and functioning back button to detail view

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block scripts %}
+    <script src="{% static 'posts/detail.js' %}" defer></script>
+    
 {% endblock scripts %}
 
 {% block title %}
@@ -11,4 +15,13 @@
 {{ obj.title }}
 <hr>
 {{obj.body}}
+<br>
+
+    <button id="back-btn" class="btn btn-info">Back</button>
+    <button id="update-btn" class="btn btn-primary">Update</button>
+    <button id="delete-btn" class="btn btn-danger">Delete</button>
+    <div id="spinner-box" class="text-center">
+        <div class="spinner-border" role="status"></div>
+    </div>
+    <div class="mt-1" id="post-box"></div>
 {% endblock content%}
